# forge

./: .gitignore  Makefile  README.md  SETUP.md  WARP.md  config.yaml  pyproject.toml
Formula/: forge.rb
src/forge/: __init__.py  agent.py  agent_manager.py  anthropic_client.py  cli.py  config.py  dispatcher.py  memory.py  models.py  providers.py  queue.py  scheduler.py  storage.py  studio.py  system_prompt.py
src/forge_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_cli.py  test_runner_echo.py
